<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilItemName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:hint="@string/item_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilItemPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:hint="@string/item_qty">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etItemQty"
            android:layout_width="match_parent"
            android:inputType="number"
            android:digits="0123456789"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        android:id="@+id/btnItemAdd"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        />

</LinearLayout>
</layout>