<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUpdateItemName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:hint="@string/item_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUpdateItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUpdateItemQuantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:hint="Item Quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUpdateItemQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789."
            />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete"
        android:id="@+id/btnDelete"
        android:layout_marginRight="@dimen/margin_70dp"
        android:layout_weight="1"


        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/update"
        android:layout_weight="1"
        android:id="@+id/btnUpdate"

        />
    </LinearLayout>

</LinearLayout>
</layout>